fix: reintroduce old plugin for staging maven deploy